<resources>
    <string name="app_name">Sej11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_Play">Main</string>
    <string name="menu_Materi">Materi</string>
    <string name="menu_Scoreboard">Scoreboard</string>
    <string name="menu_Options">Opsi</string>
    <string name="text_login">Login</string>
    <string name="login_please">Please login to continue.</string>
    <string name="login_email">Email</string>
    <string name="text_password">Password</string>
    <string name="login_notuser">Not an user?</string>
    <string name="login_registernow">Register now</string>
    <string name="text_register">Register</string>
    <string name="text_name">Name</string>
    <string name="register_passconfirm">Password Confirmation</string>
    <string name="register_city">City</string>
    <string name="register_school">School</string>
    <string name="register_birth">Birth Year</string>
    <string name="register_username">Username</string>

    <string name="hint_email">Enter your email...</string>
    <string name="hint_password">Enter your password...</string>
    <string name="hint_name">Enter your name...</string>
    <string name="hint_username">Enter your username...</string>
    <string name="hint_birthyear">Enter your birth year</string>
    <string name="hint_city">Enter your city</string>
    <string name="hint_school">Enter your school\'s name</string>
    <string name="option_logout">Logout</string>
    <string name="option_change">Change Profile</string>
    <string name="app_welcome">Welcome!</string>
    <string name="result_back">Back to Menu</string>
    <string name="result_retry">Retry Quiz</string>
    <string name="beforequiz_start">Start Quiz</string>
    <string name="dialog_wait">Please wait... Loading</string>
    <string name="welcome_text">Sejarah 11 merupakan aplikasi mobile yang cocok bagi kamu untuk belajar Sejarah sekaligus bermain quiz dengan menyenangkan. Kamu bisa membaca materi-materi sejarah yg telah disediakan dan menguji kemampuan dan pengertian mu dengan fitur quiz.</string>
    <string name="about_text">About</string>
    <string name="about_desc1">Sejarah11 is a educational game that developed by team 10, consisting of David Alexander, Timothyus Kevin Dewanto, Sintya Tri Wahyu Lestari, and Armaida Gholia</string>
    <string name="about_desc2">If you find any bugs, you can report them to tdewanto@student.ciputra.ac.id or dalexander03@student.ciputra.ac.id</string>
    <string name="about_copyright">© 2021, all rights reserved.</string>
    <string name="welcome_start">Select your choices below to get started</string>
    <string name="quiz_desc">Quiz ini cocok bagi kalian yang mau tau sampai mana pengetahuan kalian pada pokok bahasan materi Sejarah kelas 11 sesuai dengan judul pada setiap level</string>
    <string name="quiz_name">Quiz</string>
    <string name="materi_desc">Fitur materi cocok bagi kalian yang yang ingin membaca dan mendalami materi sejarah di kelas 11 dan juga sebagai tempat untuk mempersiapkan diri sebelum memulai quiznya</string>
</resources>