<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_register"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_name"
        app:layout_constraintStart_toStartOf="@+id/textView_register_text"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_text" />

    <TextView
        android:id="@+id/textView_register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_email"
        app:layout_constraintStart_toStartOf="@+id/editText_register_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_name" />

    <TextView
        android:id="@+id/textView_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_password"
        app:layout_constraintStart_toStartOf="@+id/editText_register_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_email" />

    <TextView
        android:id="@+id/textView_register_password_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_passconfirm"
        app:layout_constraintStart_toStartOf="@+id/editText_register_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_password" />

    <TextView
        android:id="@+id/textView_register_birthyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_birth"
        app:layout_constraintStart_toStartOf="@+id/editText_register_password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_password_confirm" />

    <TextView
        android:id="@+id/textView_register_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_city"
        app:layout_constraintStart_toEndOf="@+id/editText_register_birthyear"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_password_confirm" />

    <TextView
        android:id="@+id/textView_register_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_school"
        app:layout_constraintStart_toStartOf="@+id/editText_register_birthyear"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_birthyear" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_register_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintStart_toStartOf="@+id/textView_register_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_register_email"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView_register_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_register_password"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:password="true"
        app:layout_constraintStart_toStartOf="@+id/textView_register_password"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_register_password_confirm"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:password="true"
        app:layout_constraintStart_toStartOf="@+id/textView_register_password_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_password_confirmation" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_register_birthyear"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_birthyear"
        app:layout_constraintStart_toStartOf="@+id/textView_register_birthyear"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_birthyear" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_register_city"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_city"
        app:layout_constraintStart_toEndOf="@+id/editText_register_birthyear"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_city" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_register_username"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText_register_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_username" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_register_school"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_school"
        app:layout_constraintStart_toStartOf="@+id/textView_register_school"
        app:layout_constraintTop_toBottomOf="@+id/textView_register_school" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_register_school" />

    <TextView
        android:id="@+id/textView_register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="86dp"
        android:text="@string/register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText_register_name"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

