<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Activities.ChangeProfileActivity.ChangeProfileActivity">

    <TextView
        android:id="@+id/textView_changeProfile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/option_change"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_changeProfile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_name"
        app:layout_constraintStart_toStartOf="@+id/textView_changeProfile_text"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_changeProfile_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintStart_toStartOf="@+id/textView_changeProfile_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_changeProfile_username"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText_changeProfile_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_username" />

    <TextView
        android:id="@+id/textView_changeProfile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText_changeProfile_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_changeProfile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_email"
        app:layout_constraintStart_toStartOf="@+id/editText_changeProfile_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_changeProfile_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_changeProfile_email"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView_changeProfile_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_email" />

    <TextView
        android:id="@+id/textView_changeProfile_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_password"
        app:layout_constraintStart_toStartOf="@+id/editText_changeProfile_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_changeProfile_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_changeProfile_password"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:password="true"
        app:layout_constraintStart_toStartOf="@+id/textView_changeProfile_password"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_password" />

    <TextView
        android:id="@+id/textView_changeProfile_password_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_passconfirm"
        app:layout_constraintStart_toStartOf="@+id/editText_changeProfile_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_changeProfile_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_changeProfile_password_confirm"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:password="true"
        app:layout_constraintStart_toStartOf="@+id/textView_changeProfile_password_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_password_confirmation" />

    <TextView
        android:id="@+id/textView_changeProfile_birthyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_birth"
        app:layout_constraintStart_toStartOf="@+id/editText_changeProfile_password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/editText_changeProfile_password_confirm" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_changeProfile_birthyear"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_birthyear"
        app:layout_constraintStart_toStartOf="@+id/textView_changeProfile_birthyear"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_birthyear" />

    <TextView
        android:id="@+id/textView_changeProfile_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_city"
        app:layout_constraintStart_toEndOf="@+id/editText_changeProfile_birthyear"
        app:layout_constraintTop_toBottomOf="@+id/editText_changeProfile_password_confirm" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_changeProfile_city"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_city"
        app:layout_constraintStart_toEndOf="@+id/editText_changeProfile_birthyear"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_city" />

    <TextView
        android:id="@+id/textView_changeProfile_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_school"
        app:layout_constraintStart_toStartOf="@+id/editText_changeProfile_birthyear"
        app:layout_constraintTop_toBottomOf="@+id/editText_changeProfile_birthyear" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_changeProfile_school"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_school"
        app:layout_constraintStart_toStartOf="@+id/textView_changeProfile_school"
        app:layout_constraintTop_toBottomOf="@+id/textView_changeProfile_school" />

    <Button
        android:id="@+id/btn_changeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/option_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_changeProfile_school" />

</androidx.constraintlayout.widget.ConstraintLayout>