<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Fragments.OptionFragment.OptionFragment">

    <Button
        android:id="@+id/button_option_changeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:text="@string/option_change"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_option_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_option_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:text="@string/about_text"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_option_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_option_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:text="@string/option_logout"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_option_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/imageView_profile_avatar"
        app:layout_constraintTop_toTopOf="@+id/imageView_profile_avatar" />

    <TextView
        android:id="@+id/textView_option_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="TextView"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textView_option_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_option_name" />

    <TextView
        android:id="@+id/textView_option_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="TextView"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textView_option_email"
        app:layout_constraintTop_toBottomOf="@+id/textView_option_email" />

    <TextView
        android:id="@+id/textView_option_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="TextView"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textView_option_school"
        app:layout_constraintTop_toBottomOf="@+id/textView_option_school" />

    <TextView
        android:id="@+id/textView_option_birthyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView_option_city"
        app:layout_constraintTop_toBottomOf="@+id/textView_option_city"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView_profile_avatar"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/person"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>